--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -199,3 +199,12 @@
   clear: both;
   height: 0;
 }
+
+.profilePic {
+  /*box-shadow: 0px 0px 10px white;*/
+  border: 2px solid #888;
+  height: 55px;
+  width: 55px;
+  overflow: hidden;
+  border-radius: 50%;
+}
